修复语言过滤bug，添加demo测试，优化日志输出

--- a/samples/app/src/main/res/values-zh-rTW/strings.xml
+++ b/samples/app/src/main/res/values-zh-rTW/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">app</string>
-    <string name="lan">lan_default</string>
+    <string name="lan">zh-rTW</string>
 </resources>
