--- a/samples/app/src/main/res/values-ml-rIN/strings.xml
+++ b/samples/app/src/main/res/values-ml-rIN/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">app</string>
-    <string name="lan">lan_default</string>
+    <string name="lan">ml-rIN</string>
 </resources>
